# Circus-computations

./: README.md  pyproject.toml
src/circus/: __init__.py  app.py  ioc.py  settings.py
src/circus/adapters/: axis_generators.py  cli.py  plain.py
src/circus/applications/: figure_interactor.py  gateway.py  show.py
src/circus/applications/figures/: area.py  coordinate_axes.py  function.py
src/circus/domain/: models.py
src/circus/presentation/: container.py  interactor_factory.py  interface.py
